# soroban-security-scanner

./: .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  ACCESS_CONTROL_FIX_VERIFICATION.md  AUDIT_PROOF_OF_SCAN_DOCUMENTATION.md  AUDIT_TRAIL.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION_QUICK_START.md  AUTHENTICATION_README.md  AUTHENTICATION_SERVICE_COMPLETE.md  BALANCE_DISPLAY_COMPONENT.md  BATCH_OPERATIONS.md  BATCH_VULNERABILITY_VERIFICATION.md  BOUNTY_MARKETPLACE_IMPLEMENTATION.md  BUNDLE_ANALYSIS.md  CONTRIBUTING.md  COVERAGE_HEATMAP_IMPLEMENTATION.md  Cargo.toml  DASHBOARD_IMPLEMENTATION.md  DASHBOARD_PR_DESCRIPTION.md  DASHBOARD_SETUP_GUIDE.md  DASHBOARD_SUMMARY.md  DATABASE_SCHEMA.md  DIFFERENTIAL_FUZZING_DOCUMENTATION.md  DRIPS.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.scanner  FUNDING_GUIDELINES.md  GOVERNANCE.md  I18N_README.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_CHECKLIST.md  INVARIANT_RULE_BUILDER_DOCS.md  ISSUES.md  ISSUE_358_IMPLEMENTATION_SUMMARY.md  (+61 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codeql-config.yml
.storybook/: main.ts  preview.tsx
ast-parser/: Cargo.toml  Dockerfile
ast-parser/src/: main.rs  parser.rs
backend/: .env.example  Cargo.toml  Dockerfile  README_RATE_LIMITING.md  README_STATE_CONSISTENCY.md  jest.config.js  nest-cli.json  package.json  tsconfig.json
backend/src/: app.module.ts  main.rs  main.ts
backend/src/api-key/: api-key.controller.ts  api-key.module.ts  api-key.service.ts
backend/src/api-key/dto/: api-key.dto.ts
backend/src/api-key/entities/: api-key.entity.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  enhanced-roles.guard.ts  multi-signature.controller.ts  multi-signature.decorator.ts  multi-signature.service.ts
backend/src/common/config/: rate-limit.config.ts
backend/src/common/decorators/: rate-limit.decorator.ts  state-transition.decorator.ts
backend/src/common/filters/: http-exception.filter.ts
backend/src/common/guards/: rate-limit.guard.spec.ts  rate-limit.guard.ts
backend/src/common/interceptors/: rate-limit.interceptor.ts  state-consistency.interceptor.ts  transform.interceptor.ts
backend/src/common/monitoring/: state-violation.monitor.ts
backend/src/common/validation/: state-consistency.validator.spec.ts  state-consistency.validator.ts
backend/src/database/: database.module.ts
backend/src/escrow/: escrow.controller.ts  escrow.module.ts  escrow.service.ts
backend/src/escrow/dto/: create-escrow.dto.ts  release-escrow.dto.ts
backend/src/fee/: README.md  fee.controller.ts  fee.module.ts
backend/src/fee/dto/: add-balance.dto.ts  create-fee.dto.ts
backend/src/fee/entities/: fee.entity.ts  user-balance.entity.ts
backend/src/fee/guards/: fee.guard.ts
backend/src/fee/services/: fee-calculator.service.ts  fee.service.ts
backend/src/fee/tests/: fee-calculator.service.spec.ts  fee.service.spec.ts
backend/src/handlers/: health.rs  mod.rs  scan.rs
backend/src/health/: health.controller.spec.ts  health.controller.ts
backend/src/llm-patch/: llm-patch.controller.ts  llm-patch.module.ts  llm-patch.service.ts
backend/src/llm-patch/dto/: apply-patch.dto.ts  generate-patch.dto.ts
backend/src/models/: scan.rs
backend/src/risk/: ARCHITECTURE.md  INSTALLATION.md  README.md  risk-management.module.ts  risk-management.service.spec.ts  risk-management.service.ts  risk.controller.ts
backend/src/risk/assessment/: risk-assessor.service.spec.ts  risk-assessor.service.ts
backend/src/risk/calculations/: var-calculator.service.spec.ts  var-calculator.service.ts
backend/src/risk/dto/: risk-alert.dto.ts  risk-assessment.dto.ts  risk-report.dto.ts
backend/src/risk/e2e/: risk-management.e2e-spec.ts
backend/src/risk/entities/: risk-data.entity.ts
backend/src/risk/hedging/: hedging-strategy.service.ts
backend/src/risk/monitoring/: real-time-monitor.service.ts
backend/src/risk/testing/: stress-test.service.ts
backend/src/scan/: garbage-collector.service.ts  scan-progress.gateway.ts  scan.controller.ts  scan.module.ts  scan.processor.ts  scan.service.ts
backend/src/scan/dto/: create-scan.dto.ts
backend/src/scan/entities/: scan.entity.ts  vulnerability.entity.ts
backend/src/services/: scanner.rs
backend/src/user/: user.controller.ts  user.service.ts
backend/src/user/dto/: create-user.dto.ts  update-user.dto.ts
backend/src/user/entities/: user.entity.ts
backend/src/webhook/: notification.processor.ts  webhook.controller.ts  webhook.module.ts  webhook.service.ts
backend/src/webhook/dto/: create-webhook.dto.ts  test-webhook.dto.ts
backend/src/webhook/entities/: notification-queue.entity.ts  webhook.entity.ts
backend/test/: access-control.enhanced.spec.ts  rate-limit.e2e-spec.ts  reentrancy.escrow.spec.ts  setup.ts  state-consistency.e2e-spec.ts
component-library/: .eslintrc.cjs  .gitignore  README.md  jest.config.cjs  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.build.json  tsconfig.json
contracts/: Cargo.toml
contracts/src/: batch_verify_tests.rs  dispute_tests.rs  event_logging_tests.rs  gas_benchmarks.rs  gas_limit_tests.rs  lib.rs  pausable.rs  security_tests.rs  test.rs  tests.rs  upgrade_v2.rs
core-scanner/: Cargo.toml  Dockerfile
core-scanner/src/: analyzer.rs  gas_analyzer.rs  lib.rs  main.rs  patterns.rs  report.rs  scan_controller.rs  vulnerabilities.rs
core-scanner/tests/: scan_controller_tests.rs  vulnerability_tests.rs
docs/: ACCESSIBILITY_TESTING.md  ACCESS_CONTROL_POLICIES.md  API_VERSIONING.md  BUSINESS_CONTINUITY.md  (+7 more)
invariant-fuzzer/: Cargo.toml  Dockerfile  test_payload.json
invariant-fuzzer/src/: executor.rs  fuzzer.rs  ledger.rs  main.rs
llm-patch-service/: .env.example  Cargo.toml  Dockerfile  README.md
llm-patch-service/migrations/: 001_initial.sql
llm-patch-service/src/: confidence.rs  database.rs  error.rs  fallback.rs  git_diff.rs  lib.rs  llm_client.rs  main.rs  models.rs  sanitization.rs  verification.rs
llm-patch-service/tests/: integration_test.rs
(+663 files in other folders)
