[package]
name = "soroban-security-scanner"
version = "0.1.0"
edition = "2021"
authors = ["connect-boiz"]
description = "A secure Soroban smart contract for escrow and verification operations"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0"
soroban-token-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
