[package]
name = "soroban-security-scanner"
version = "1.0.0"
edition = "2021"
authors = ["connect-boiz"]
description = "Security scanner for Soroban smart contracts"
license = "MIT"
repository = "https://github.com/gbengaeben/soroban-security-scanner"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Email provider dependencies
lettre = "0.11"

# SMS provider dependencies (Twilio)
reqwest = { version = "0.11", features = ["json"] }

# Template engine
handlebars = "4.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Database (for production use)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], optional = true }

# Redis (for caching and rate limiting)
redis = { version = "0.23", features = ["tokio-comp"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[features]
default = []
database = ["sqlx"]
redis-cache = ["redis"]
full = ["database", "redis-cache"]

[[bin]]
name = "soroban-scanner"
path = "src/main.rs"

[lib]
name = "soroban_security_scanner"
path = "src/lib.rs"
