[package]
name = "soroban-ast-parser"
version = "0.1.0"
edition = "2021"
authors = ["Connect Boiz"]
description = "Microservice for parsing Soroban Rust smart contract AST"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit", "timeout", "trace"] }

# AST parsing and analysis
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Normalization
rust-format = "0.3"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
