[package]
name = "soroban-security-scanner-backend"
version = "0.1.0"
edition = "2021"
authors = ["Connect Boiz"]
description = "Backend API for Soroban Security Scanner"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Authentication & Security
jsonwebtoken = "9.0"
bcrypt = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenv = "0.15"

# HTTP client (for calling core scanner)
reqwest = { version = "0.11", features = ["json"] }

# Async utilities
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"

[[bin]]
name = "server"
path = "src/main.rs"
