[package]
name = "soroban-security-scanner-core"
version = "0.1.0"
edition = "2021"
authors = ["Connect Boiz"]
description = "Core security analysis engine for Soroban smart contracts"

[dependencies]
# AST parsing and analysis
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# Soroban SDK analysis
soroban-sdk = "21.0.0-preview.1"

# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Caching
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] } # For pulling latest definitions
lazy_static = "1.4.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# API Documentation & Rate Limiting
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
tower-governor = "0.1.1"
axum-macros = "0.4.1"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
mockito = "1.2"
