[package]
name = "soroban-invariant-fuzzer"
version = "0.1.0"
edition = "2021"
authors = ["Connect Boiz"]
description = "Invariant-driven fuzz testing worker for Soroban contracts"

[dependencies]
# WASM Execution
wasmtime = "16.0"
wasmtime-wasi = "16.0"

# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
rand = "0.8"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Internal workspace dependency (optional, for reusing invariants)
# stellar-security-scanner = { path = ".." }

[dev-dependencies]
tempfile = "3.8"
