[package]
name = "llm-patch-service"
version = "0.1.0"
edition = "2021"
authors = ["Security Scanner Team"]
description = "LLM-powered vulnerability analysis and secure code patching microservice"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for LLM APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Security and crypto
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"

# Async utilities
futures = "0.3"

# Regular expressions for sanitization
regex = "1.10"

# Git operations
git2 = "0.18"

# Temporary file handling
tempfile = "3.8"

# Process execution for compilation sandbox
tokio-process = "0.2"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
mockito = "1.2"
